--- a/staging-cluster/kafka-deployment.yaml
+++ b/staging-cluster/kafka-deployment.yaml
@@ -35,7 +35,7 @@ spec:
           value: "1"
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: zookeeper:2181
-        image: confluentinc/cp-kafka:5.5.1
+        image: kymeric/cp-kafka
         name: broker
         ports:
         - containerPort: 29092
