--- a/staging-cluster/zookeeper-deployment.yaml
+++ b/staging-cluster/zookeeper-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           value: "2181"
         - name: ZOOKEEPER_TICK_TIME
           value: "2000"
-        image: confluentinc/cp-zookeeper:5.5.1
+        image: kymeric/cp-zookeeper
         imagePullPolicy: ""
         name: zookeeper
         ports:
